--- a/style.css
+++ b/style.css
@@ -33,14 +33,20 @@ nav {
   margin-top: 10px;
   background-color: #D9D4CC;
   background: rgba(255, 255, 255, 0.3);
-
   border-radius: 10px;
+  
 }
 nav ul {
   width: 100%;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   list-style: none;
+}
+nav img {
+  height: 30px;
+  display: flex;
+  align-items: center;
 }
 nav a {
   text-decoration: none;
@@ -48,7 +54,8 @@ nav a {
 }
 
 nav a:hover {
-  color: #336666;
+  color: black;
+  font-style: italic;
 }
 
 .mainlogo {
@@ -82,6 +89,10 @@ nav a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#section2 h1 {
+  font-style: italic;
 }
 
 @media only screen and (max-width: 550px) {
@@ -468,6 +479,7 @@ nav a:hover {
   background-color: #D9D4CC;
   margin-top: 10px;
   margin-bottom: 20px;
+  font-style: italic;
 }
 .featured {
   display: flex;
@@ -483,13 +495,11 @@ nav a:hover {
   height: 300px;
 }
 .featured span {
-  margin-top: 20px;
   font-size: 40px;
 }
 
 
 #section4 {
-
   background-color: #F2955E;
   width: 100%;
   display: flex;
@@ -501,14 +511,24 @@ nav a:hover {
   margin-top: 10px;
   margin-bottom: 20px;
   text-align: center;
+  font-style: italic;
+  font-size: 40px;
   background-color: #D9D4CC;
   width: 100%;
 }
+.quickabout {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  flex-wrap: wrap;
+}
 #section4 h2 {
   text-align: center;
+  font-size: 40px;
 }
 #section4 h3 {
   text-align: center;
+  font-size: 25px;
 }
 .mission {
   padding-top: 50px;
@@ -585,20 +605,28 @@ nav a:hover {
 
 
 #purchase {
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #F2955E;
+  background-color: #D9D4CC;
+
 }
 #purchase h1 {
   text-align: center;
+  font-style: italic;
+  background-color: #D9D4CC;
+  width: 100%;
+  margin-bottom: 10px;
 }
 .purchaseinfo {
-  border: 2px solid black;
   width: 100%;
   max-width: 700px;
   background: #D9D4CC;
   border-radius: 10px;
+  width: 80%;
+  border: 3px solid black;
+  margin-bottom: 20px;
 }
 .purchaseinfo li {
   margin-left: 50px;
@@ -626,6 +654,7 @@ nav a:hover {
   background-repeat: no-repeat;
   background-size: contain;
   padding-top: 40px;
+ 
 }
 #contact h1 {
   text-align: center;
