--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ nav {
   background-color: #D9D4CC;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
-  
 }
 nav ul {
   width: 100%;
@@ -66,6 +65,7 @@ nav a:hover {
   font-family: 'Playfair Display', serif;
   letter-spacing: 10px;
   padding-top: 3vh;
+  margin-top: 10px;
 }
 .mainslogan {
   color: #D9D4CC;
